--- a/todolist.css
+++ b/todolist.css
@@ -159,7 +159,7 @@
     color: #000000;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     box-sizing: border-box;
     padding: 16px;
     -webkit-box-shadow: 0px 10px 13px -7px #000000, 21px 19px 22px 5px rgba(0, 0, 0, 0);
@@ -183,7 +183,7 @@
 
 .buttons {
     display: flex;
-    justify-content: end;
+    justify-items: flex-end;
     flex-direction: column;
     gap: 5px;
 }
@@ -249,6 +249,7 @@
     height: 30px;
     font-family: "incloud";
     font-size: 30px;
+    width: -moz-available;
 }
 
 
